# project

Quraan_project/: App.cpp  CMakeLists.txt  doublyLinkedList.cpp  main.cpp  playList.cpp  surah.cpp
